Delete place
